[tool.poetry]
name = "at1-pc1"
version = "0.1.0"
description = ""
authors = ["Bruno Pascoal <bpascoal.santos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.33.0"
plotly = "^5.20.0"
xlsxwriter = "^3.2.0"
pandas = "^2.2.1"
streamlit-option-menu = "^0.3.12"
openpyxl = "^3.1.2"
xlrd = "^2.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
